sample/retrieveUnpackaged/objects/WaterMAP_Consolidated_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>WaterMAP Consolidated Accounts</relationshipLabel>
        <relationshipName>WaterMAP_Consolidated_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>Billing_Account__r.Property_Address__c</formula>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watermap__c</fullName>
        <label>Watermap</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipLabel>WaterMAP Consolidated Accounts</relationshipLabel>
        <relationshipName>WaterMAP_Consolidated_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WaterMAP Consolidated Account</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WaterMAP Consolidated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>